tests/ui/cast/cast-from-nil.rs
fn main() { let u = (assert!(true) as u32); } //~ ERROR non-primitive cast: `()` as `u32`
